assets/css/my_cards.css
/*
 * Hands are the players hand
 */
 .playing-cards .hand {
    cursor: pointer;
}
.playing-cards .hand .card {
    margin-right: -1em;
}
/*
 * Tables are the traded cards
 */
 .playing-cards .table {
    font-size: 1.1em;
    cursor: default;
}
.playing-cards .table .card {
    margin-right: 2em;
}
/*
 * Played are the middle cards
 */
 .playing-cards .played {
    font-size: 1.1em;
    cursor: default;
}
.playing-cards .played .card {
    /*margin-right:-2em;*/
    margin-right:1em;
}
/*
 * Card shape and animations
 */
 .playing-cards .card {
    font-size: 2em;
    display: inline-block;
    width: 3.3em;
    height: 4.6em;
    position: relative;
    font-family: monospace;
    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    transform-style: preserve-3d;
    -webkit-transition: -webkit-transform 0.3s linear;
    -moz-transition: -moz-transform 0.3s linear;
    transition: transform 0.3s linear;
}
.playing-cards .card .front, .playing-cards .card .back {
    position: absolute;
    width: 100%;
    height: 100%;
    padding: .25em;
    -webkit-border-radius: .3em;
    -moz-border-radius: .3em;
    border-radius: .3em;
    -webkit-box-shadow: .1em .1em .3em #444;
    -moz-box-shadow: .1em .1em .3em #444;
    box-shadow: .1em .1em .3em #444;
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    backface-visibility: hidden;
}
.playing-cards .card.flipped {
    -webkit-transform: rotateY(180deg);
    -moz-transform: rotateY(180deg);
    transform: rotateY(180deg);
}
.playing-cards .card .front {
    background-color: #fff;
}
.playing-cards .card .back {
    background: url("../images/norwegian_rose_@2X.png");
    background-size: 48px;
    -webkit-box-shadow: inset 0 0 0px .2em #FFF, .1em .1em .3em #444;
    -moz-box-shadow: inset 0 0 0px .2em #FFF, .1em .1em .3em #444;
    -box-shadow: inset 0 0 0px .2em #FFF, .1em .1em .3em #444;
    -webkit-transform: rotateY(-180deg);
    -moz-transform: rotateY(-180deg);
    transform: rotateY(-180deg);
}
/**
 * Card look
 */
 .playing-cards .card .front .rank {
    height: 25%;
    text-align: left;
    position: relative;
    top: -.3em;
}
.playing-cards .card .front .suit {
    text-align: left;
    font-size: .7em;
    height: 25%;
    position: relative;
    top: -.3em;
}
.playing-cards .card .front .icon {
    text-align: center;
    font-size: 2.9em;
    height: 50%;
    position: relative;
    top: -.45em;
}
/*
 * Rotations
 */
 .playing-cards .card.rotate90 {
    transform:rotate(90deg);
    -moz-transform:rotate(90deg);
    -webkit-transform:rotate(90deg);
}
.playing-cards .card.rotate180 {
    transform:rotate(180deg);
    -moz-transform:rotate(180deg);
    -webkit-transform:rotate(180deg);
}
.playing-cards .card.rotate270 {
    transform:rotate(270deg);
    -moz-transform:rotate(270deg);
    -webkit-transform:rotate(270deg);
}

